--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node
+node_modules/
+.env
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# React
+client/build/
+client/node_modules/
 
-# testing
-/coverage
+# VSCode
+.vscode/
 
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Images / Uploads
+server/uploads/
